WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46003
[BREWMP] Fix a typo in key code name
https://bugs.webkit.org/show_bug.cgi?id=46003
Summary
[BREWMP] Fix a typo in key code name
Kwang Yul Seo
Reported
2010-09-17 15:25:46 PDT
AVK_CLR is the right Brew MP key code name for VK_BACK.
Attachments
Patch
(1.18 KB, patch)
2010-09-17 15:26 PDT
,
Kwang Yul Seo
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kwang Yul Seo
Comment 1
2010-09-17 15:26:48 PDT
Created
attachment 67961
[details]
Patch
Andreas Kling
Comment 2
2010-09-17 19:09:45 PDT
Comment on
attachment 67961
[details]
Patch r=me
Adam Barth
Comment 3
2010-09-18 17:47:14 PDT
Comment on
attachment 67961
[details]
Patch Clearing flags on attachment: 67961 Committed
r67803
: <
http://trac.webkit.org/changeset/67803
>
Adam Barth
Comment 4
2010-09-18 17:47:19 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 5
2010-09-18 17:48:53 PDT
Comment on
attachment 67961
[details]
Patch Rejecting patch 67961 from commit-queue. Failed to run "[u'/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebCore/platform/brew/PlatformKeyboardEventBrew.cpp Hunk #1 FAILED at 106. 1 out of 1 hunk FAILED -- saving rejects to file WebCore/platform/brew/PlatformKeyboardEventBrew.cpp.rej Full output:
http://queues.webkit.org/results/4064060
Adam Barth
Comment 6
2010-09-18 18:05:21 PDT
Interesting. This patch hit a race condition in the commit-cluster. I think the first commit-queue instance took long enough to process the patch that the lock was released. Maybe we need to up the timeout?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug