2010-09-18  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Andreas Kling.

        [BREWMP] Fix a typo in key code name
        https://bugs.webkit.org/show_bug.cgi?id=46003

        AVK_CLR is the right Brew MP key code name for VK_BACK.

        * platform/brew/PlatformKeyboardEventBrew.cpp:
        (WebCore::windowsKeyCodeForKeyEvent):

Canonical link: https://commits.webkit.org/58509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67803 268f45cc-cd09-0410-ab3c-d52691b4dbfc